2005-12-26  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* Repository: STLport 5.0.1, tag STLPORT_5_0_1

2005-12-24  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/config/stl_gcc.h: gcc, builded by Apple is differ
	in behavior from original; in particular, in path to includes;

	* build/Makefiles/gmake/app/gcc.mak: fix gcc options on MacOS X;
	STLport is free from libstdc++ on MacOS now;

	* build/Makefiles/gmake/gcc.mak: fix gcc options on MacOS X; gcc,
	builded by Apple is differ in behavior from original;
	detect this;

	* build/Makefiles/gmake/lib/gcc.mak: fix gcc on MacOS X;
	differentiate gcc from Apple and original;
	STLport is free from libstdc++ on MacOS X now;

	* build/Makefiles/gmake/darwin/rules-so.mak: use 
	gcc instead of c++ for linkage, if only C sources present.

	* build/lib/gcc.mak, build/test/unit/gcc.mak: remove duplication
	of stlport includes.

2005-12-14  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/Makefiles/gmake/sysid.mak: parse two-token target
	system identification string along with three-token one
	[useful when vendor is omitted]; thanks Jonathan Sprinkle.

	* stlport/cwctype, stlport/stl/_cwctype.h: use code from
	main CVS trunc; wctype_t and others are in global namespace
	on FreeBSD.

	* Build: all unit tests builded fine with cross [gcc 3.4.5]
	on Linux for FreeBSD 5.3.

	* build/Makefiles/gmake/app/gcc.mak, lib/gcc.mak: use build
	with -nostdlib on Solaris.

	* src/cxa.c: fix for Solaris

	* stlport/config/stl_solaris.h, stlport/stl/_cmath.h:
	hmm, strange... sometimes MATH_L and MATH_F present on Solaris,
	sometimes not...

	* Build: lib, all unit tests builded fine and passed [334 tests]
	on Solaris 9 [SPARC] with gcc 3.3.2.

	* Repository: remove obsolete files that has relation
	to unsupported [and no chances to be supported] platforms in
	STLPORT_5_0 (STLport 5.0.x) branch.

2005-12-13  Francois Dumont  <dums@stlport...>
